<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PopularToursDetailActvity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="start|top"
            app:layout_scrollFlags="snap|exitUntilCollapsed|scroll"
            app:scrimAnimationDuration="1000">

            <ImageView
                android:id="@+id/ivTours"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:orientation="vertical">

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sea Flower Resort"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_on_white_24dp"
                    android:text="Sea Flower Resort"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_regular_2x" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RatingBar
                        android:id="@+id/rbRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:progressTint="@android:color/white"
                        android:rating="2.1" />

                    <org.mmtextview.components.MMTextView
                        android:id="@+id/tvAverageRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="2.1"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_regular_2x"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium_2"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/llFreeWifi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_home_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_lbl_free_wifi" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSandBeach"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_home_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_lbl_sand_beach" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFirstCoastline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_home_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_lbl_first_coastline"
                        android:textSize="@dimen/text_regular" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llBarAndRestaurant"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_home_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_lbl_bar_n_restaurant"
                        android:textSize="@dimen/text_regular" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/margin_medium">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/margin_medium_2"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivBooking"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/icons8_xbox_b_50"/>

                        <org.mmtextview.components.MMTextView
                            android:id="@+id/tvBooking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_lbl_booking"
                            android:layout_toEndOf="@id/ivBooking"
                            android:textSize="@dimen/text_regular_2x"
                            android:textStyle="bold"
                            android:paddingStart="@dimen/margin_medium"/>

                        <org.mmtextview.components.MMTextView
                            android:id="@+id/tvBookingScores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/ivBooking"
                            android:layout_below="@id/tvBooking"
                            android:textSize="@dimen/text_regular_2x"
                            android:paddingStart="@dimen/margin_medium"/>

                        <org.mmtextview.components.MMTextView
                            android:id="@+id/tvBookingTotalReviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tvBookingScores"
                            android:text="Based on 30 reviews"
                            />

                    </RelativeLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/margin_medium">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/margin_medium_2"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivHotelOut"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/icons8_circled_h_50"/>

                        <org.mmtextview.components.MMTextView
                            android:id="@+id/tvHotelOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_lbl_hotel_out"
                            android:layout_toEndOf="@id/ivHotelOut"
                            android:textSize="@dimen/text_regular_2x"
                            android:textStyle="bold"
                            android:paddingStart="@dimen/margin_medium"/>

                        <org.mmtextview.components.MMTextView
                            android:id="@+id/tvHotelOutScores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/ivHotelOut"
                            android:layout_below="@id/tvHotelOut"
                            android:textSize="@dimen/text_regular_2x"
                            android:paddingStart="@dimen/margin_medium"/>

                        <org.mmtextview.components.MMTextView
                            android:id="@+id/tvHotelOutTotalReviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tvHotelOutScores"
                            android:text="Based on 30 reviews"
                            />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <org.mmtextview.components.MMTextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_medium_2"
                android:paddingEnd="@dimen/margin_medium_2"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_medium"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_photo"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>